Change basic framework to Javacord